--- a/app/views/components/gds/saveButtons.scala.html
+++ b/app/views/components/gds/saveButtons.scala.html
@@ -14,9 +14,7 @@
  * limitations under the License.
  *@
 
-@this(
-        saveAndContinue: saveAndContinue
-)
+@this(saveAndContinue: saveAndContinue)
 
 @(saveAndContinueKey: String = "site.save_and_continue", saveAsDraftKey: String = "site.save_and_come_back_later")(implicit messages: Messages)
 
