--- a/app/views/components/gds/removeButton.scala.html
+++ b/app/views/components/gds/removeButton.scala.html
@@ -15,9 +15,21 @@
  *@
 
 @import uk.gov.hmrc.govukfrontend.views.html.components._
+@import play.twirl.api.HtmlFormat
+@import scala.collection.immutable
 
-@this(govukButton: GovukButton)
+@this(govukButton : GovukButton)
 
-@(messageKey: String = "site.save_and_continue")(implicit messages: Messages)
+@(value: Option[String] = None, hiddenLabel: Option[String] = None)(implicit messages: Messages)
 
-@govukButton(Button(content = Text(messages(messageKey)), attributes = Map("id" -> "submit", "name" -> "SaveAndContinue")))
+@govukButton(Button(
+ classes = "govuk-button--secondary",
+    content = HtmlContent(HtmlFormat.fill(
+        immutable.Seq(
+            Html(s"""<span aria-hidden="true">${messages("site.remove")}</span>"""),
+            Html(s"""<span class="govuk-visually-hidden">${messages(hiddenLabel.getOrElse("site.remove"))}</span>""")
+        )
+    )),
+ name = Some("Remove"),
+ value = value
+))
