CEDS-2237 - Improve 'Other Parties' page
Additional comments addressed:

1) Remove button additional space - ok
2) Error message without selecting option -ok
3) No option selected and saved - ok
4) Add Error message options - ok
5) Wordings on summary page - ok
6) EORI Error Message - ok

--- a/app/views/components/gds/removeButton.scala.html
+++ b/app/views/components/gds/removeButton.scala.html
@@ -23,7 +23,7 @@
 @(value: Option[String] = None, hiddenLabel: Option[String] = None)(implicit messages: Messages)
 
 @govukButton(Button(
- classes = "govuk-button--secondary",
+ classes = "govuk-button--secondary govuk-!-margin-0",
     content = HtmlContent(HtmlFormat.fill(
         immutable.Seq(
             Html(s"""<span aria-hidden="true">${messages("site.remove")}</span>"""),
